testdata/test/resources/com/yafred/asn1/test/should-fail/integer_duplicate_name.asn
-- FAIL duplicate id

Module DEFINITIONS ::= BEGIN

My-integer ::= INTEGER { un (1), deux (2), un (3) }


END